--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,8 +9,9 @@
 
     &__img {
         grid-column: 2/3;
-        width: 100%;
-        padding-left: 3rem;
+        width: 48.7rem;
+        justify-self: right;
+        padding-left: 2rem;
     }
 
     &__content {
