--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: "Cormorant SC", serif;
-  line-height: 1.6; }
+  font-family: "Cormorant SC", serif; }
 
 .container {
   display: grid;
@@ -28,8 +27,9 @@ body {
   padding: 10rem 0; }
   .header__img {
     grid-column: 2/3;
-    width: 100%;
-    padding-left: 3rem; }
+    width: 48.7rem;
+    justify-self: right;
+    padding-left: 2rem; }
   .header__content {
     grid-column: 1/2;
     display: flex;
@@ -60,19 +60,22 @@ body {
 
 .projects {
   grid-row: 4/5;
-  grid-column: 2/6; }
+  grid-column: 2/6;
+  margin-top: 10rem; }
 
 .growth {
   grid-row: 5/6;
-  grid-column: 1/7;
-  background-color: #fafafa;
-  display: grid;
-  grid-template-columns: 1.2fr repeat(4, minmax(30rem, 1fr)) 1.2fr; }
+  grid-column: 2/6;
+  padding-bottom: 10rem; }
+  .growth__bgcolor {
+    grid-row: 5/6;
+    grid-column: 1/8;
+    background-color: #fafafa; }
   .growth__content {
     grid-column: 2/6; }
   .growth__numbers {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 3rem; }
   .growth__block {
     background-color: #fff;
@@ -98,17 +101,57 @@ body {
     height: 3.6rem;
     width: 3.6rem; }
   .growth--h4 {
-    padding-top: 10rem; }
+    padding-top: 10rem;
+    text-align: center; }
+  .growth--h2 {
+    text-align: center; }
 
 .feedback {
   grid-row: 6/7;
-  grid-column: 2/6; }
+  grid-column: 2/6;
+  display: grid;
+  justify-content: center; }
   .feedback--h4 {
-    padding-top: 10rem; }
+    padding-top: 10rem;
+    text-align: center; }
+  .feedback--h2 {
+    text-align: center; }
+  .feedback__quotes {
+    margin-bottom: -2.5rem; }
+  .feedback__listing {
+    width: 83rem;
+    font-size: 2rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400; }
+  .feedback__content {
+    text-align: center;
+    font-size: 2rem;
+    display: flex;
+    gap: 1rem;
+    margin-top: 2.4rem;
+    margin-bottom: 10rem; }
+  .feedback__author {
+    color: #ff3147;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700; }
+  .feedback__company {
+    color: #808080;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300; }
 
 .footer {
   grid-row: 7/8;
-  grid-column: 2/6; }
+  grid-column: 1/8;
+  width: 100%;
+  height: 31rem;
+  background: url(../img/NoPathback.svg) no-repeat center center;
+  background-size: cover;
+  position: relative; }
+  .footer__logos {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 .qualities {
   grid-row: 3/4;
@@ -132,7 +175,7 @@ body {
     margin-bottom: 6rem; }
   .qualities__listing {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 2rem; }
   .qualities__icon {
     height: 7.5rem;
@@ -150,7 +193,126 @@ body {
 
 .services {
   grid-row: 2/3;
-  grid-column: 2/7; }
+  grid-column: 2/7;
+  padding-bottom: 10rem; }
+  .services--h4 {
+    text-align: left;
+    margin-top: 10rem; }
+  .services--h2 {
+    grid-column: 1/2;
+    text-align: left;
+    width: 44.2rem; }
+  .services__content--box {
+    margin-top: 4rem;
+    display: flex;
+    gap: 5rem; }
+  .services__content--detail {
+    grid-column: 3/6;
+    width: 58.4rem;
+    padding-right: 5rem;
+    font-size: 1.6rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300; }
+
+.bgcolor-services {
+  grid-column: 1/8;
+  grid-row: 2/3;
+  background-color: #fafafa; }
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden; }
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out; }
+  .slider__slides {
+    display: flex;
+    gap: 30px; }
+  .slider__slide {
+    min-width: calc((100% - 90px) / 4);
+    height: 520px;
+    position: relative;
+    overflow: hidden; }
+  .slider__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    vertical-align: middle; }
+  .slider__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.9);
+    text-align: center;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.5s, transform 0.5s; }
+  .slider__heading {
+    font-size: 2.4rem;
+    font-family: "Cormorant SC", serif;
+    font-weight: 600;
+    margin-top: 3.6rem;
+    margin-bottom: 2rem; }
+  .slider__description {
+    font-size: 1.6rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300; }
+  .slider #slider--icon {
+    height: 5.7rem;
+    width: 5.7rem; }
+  .slider__slide:hover .slider__content {
+    opacity: 1;
+    height: 100%;
+    width: 100%;
+    background-color: #ff3147;
+    transform: translate(-50%, -50%) scale(1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .slider__button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #ff0000;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 6.8rem;
+    width: 18.5rem;
+    font-size: 1.4rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem; }
+  .slider #slider__arrow {
+    width: 3.7rem;
+    height: 1rem; }
+
+.navigation {
+  width: 100%;
+  bottom: 10px;
+  display: flex;
+  justify-content: start;
+  margin-top: 4rem; }
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+  transition: background-color 0.3s; }
+  .dot:hover, .dot.active {
+    background-color: #717171; }
 
 .heading--1 {
   font-family: "Cormorant SC", serif;
@@ -160,8 +322,6 @@ body {
 .heading--4 {
   font-size: 2.4rem;
   color: #ff3147;
-  text-align: center;
-  margin-bottom: 4rem;
   font-family: "Cormorant SC", serif;
   font-weight: 600;
   text-transform: uppercase; }
@@ -171,6 +331,5 @@ body {
   font-family: "Cormorant SC", serif;
   font-weight: 700;
   text-transform: uppercase;
-  text-align: center;
   letter-spacing: 0px;
   margin-bottom: 6rem; }
