--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,16 @@
 .footer {
     grid-row: 7/8;
-    grid-column: 2/6;
+    grid-column: 1/8;
+    width: 100%;
+    height: 31rem;
+    background: url(../img/NoPathback.svg) no-repeat center center;
+    background-size: cover;
+    position: relative;
+
+    &__logos {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
