--- a/sass/_growth.scss
+++ b/sass/_growth.scss
@@ -1,16 +1,20 @@
 .growth {
     grid-row: 5/6;
-    grid-column: 1/7;
-    background-color: $color-grey-light-2;
-    display: grid;
-    grid-template-columns: 1.2fr repeat(4, minmax(30rem, 1fr)) 1.2fr;
+    grid-column: 2/6;
+    padding-bottom: 10rem;
+
+    &__bgcolor {
+        grid-row: 5/6;
+        grid-column: 1/8;
+        background-color: #fafafa;
+    }
 
     &__content {
         grid-column: 2/6;
     }
     &__numbers {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
         gap: 3rem;
     }
     &__block {
@@ -48,5 +52,10 @@
 
     &--h4 {
         padding-top: 10rem;
+        text-align: center;
+    }
+
+    &--h2 {
+        text-align: center;
     }
 }
