--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,4 +1,156 @@
 .services {
     grid-row: 2/3;
     grid-column: 2/7;
+    padding-bottom: 10rem;
+    &--h4 {
+        text-align: left;
+        margin-top: 10rem;
+    }
+    &--h2 {
+        grid-column: 1/2;
+        text-align: left;
+        width: 44.2rem;
+    }
+
+    &__content--box {
+        margin-top: 4rem;
+        display: flex;
+        gap: 5rem;
+    }
+
+    &__content--detail {
+        grid-column: 3/6;
+        width: 58.4rem;
+        padding-right: 5rem;
+        font-size: 1.6rem;
+        font-family: $font-display;
+        font-weight: 300;
+    }
+}
+
+.bgcolor-services {
+    grid-column: 1/8;
+    grid-row: 2/3;
+    background-color: #fafafa;
+}
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+
+    &__slides {
+        display: flex;
+        gap: 30px;
+    }
+    &__slide {
+        min-width: calc((100% - 90px) / 4);
+        height: 520px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__slide img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        vertical-align: middle;
+    }
+
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0.9);
+        text-align: center;
+        color: #fff;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        border-radius: 10px;
+        opacity: 0;
+        transition:
+            opacity 0.5s,
+            transform 0.5s;
+    }
+
+    &__heading {
+        font-size: 2.4rem;
+        font-family: $font-primary;
+        font-weight: 600;
+        margin-top: 3.6rem;
+        margin-bottom: 2rem;
+    }
+    &__description {
+        font-size: 1.6rem;
+        font-family: $font-display;
+        font-weight: 300;
+    }
+
+    #slider--icon {
+        height: 5.7rem;
+        width: 5.7rem;
+    }
+
+    &__slide:hover &__content {
+        opacity: 1;
+        height: 100%;
+        width: 100%;
+        background-color: $color-primary;
+        transform: translate(-50%, -50%) scale(1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #fff;
+        color: #ff0000;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 6.8rem;
+        width: 18.5rem;
+        font-size: 1.4rem;
+        font-family: $font-display;
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+    #slider__arrow {
+        width: 3.7rem;
+        height: 1rem;
+    }
+}
+
+.navigation {
+    width: 100%;
+    bottom: 10px;
+    display: flex;
+    justify-content: start;
+    margin-top: 4rem;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover,
+    &.active {
+        background-color: #717171;
+    }
 }
