--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,48 @@ body {
   grid-row: 4/5;
   grid-column: 2/6;
   margin-top: 10rem; }
+  .projects--h4 {
+    text-align: center; }
+  .projects--h2 {
+    text-align: center;
+    margin-top: 4rem; }
+  .projects--h5 {
+    font-size: 2rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500; }
+  .projects--detail {
+    font-size: 1.6rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300; }
+  .projects__container {
+    display: grid;
+    grid-template-columns: minmax(20rem, 2fr) minmax(20rem, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 0 6rem;
+    padding-bottom: 12rem; }
+  .projects__img {
+    grid-column: 1/2;
+    grid-row: 1/4;
+    width: 100%;
+    height: 56.7rem; }
+  .projects--1 {
+    grid-column: 2/3;
+    grid-row: 1/2; }
+  .projects--2 {
+    grid-column: 2/3;
+    grid-row: 2/3; }
+  .projects--3 {
+    grid-column: 2/3;
+    grid-row: 3/4; }
+  .projects--1, .projects--2, .projects--3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f6f6f6;
+    padding: 3.3rem; }
+  .projects--active {
+    background-color: #ff3147;
+    color: #fff; }
 
 .growth {
   grid-row: 5/6;
@@ -104,7 +146,8 @@ body {
     padding-top: 10rem;
     text-align: center; }
   .growth--h2 {
-    text-align: center; }
+    text-align: center;
+    margin-top: 4rem; }
 
 .feedback {
   grid-row: 6/7;
@@ -115,7 +158,8 @@ body {
     padding-top: 10rem;
     text-align: center; }
   .feedback--h2 {
-    text-align: center; }
+    text-align: center;
+    margin-top: 4rem; }
   .feedback__quotes {
     margin-bottom: -2.5rem; }
   .feedback__listing {
