--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -2,4 +2,67 @@
     grid-row: 4/5;
     grid-column: 2/6;
     margin-top: 10rem;
+
+    &--h4 {
+        text-align: center;
+    }
+
+    &--h2 {
+        text-align: center;
+        margin-top: 4rem;
+    }
+
+    &--h5 {
+        font-size: 2rem;
+        font-family: $font-display;
+        font-weight: 500;
+    }
+
+    &--detail {
+        font-size: 1.6rem;
+        font-family: $font-display;
+        font-weight: 300;
+    }
+
+    &__container {
+        display: grid;
+        grid-template-columns: minmax(20rem, 2fr) minmax(20rem, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 0 6rem;
+        padding-bottom: 12rem;
+    }
+    &__img {
+        grid-column: 1/2;
+        grid-row: 1/4;
+        width: 100%;
+        height: 56.7rem;
+    }
+
+    &--1 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    &--2 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+    &--3 {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+    &--1,
+    &--2,
+    &--3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #f6f6f6;
+        padding: 3.3rem;
+    }
+    &--active {
+        background-color: $color-primary;
+        color: #fff;
+    }
 }
