--- a/sass/_growth.scss
+++ b/sass/_growth.scss
@@ -59,4 +59,15 @@
         text-align: center;
         margin-top: 4rem;
     }
+
+    @media only screen and(max-width: 1900px) {
+        &__numbers {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(38rem, 1fr));
+            gap: 3rem;
+            justify-items: center;
+            align-items: center;
+            align-content: center;
+        }
+    }
 }
