--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -11,7 +11,7 @@
         grid-column: 2/3;
         width: 48.7rem;
         justify-self: right;
-        padding-left: 2rem;
+        padding: 2rem;
     }
 
     &__content {
@@ -46,5 +46,93 @@
         margin-top: 5rem;
         font-family: $font-display;
         font-size: 1.6rem;
+    }
+}
+
+//CSS for pop-up form
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    &-content {
+        background-color: #fff;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 60rem;
+    }
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+
+    &:hover,
+    &:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
+
+//form styling
+.contact-form {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    h2 {
+        font-family: $font-display;
+        font-weight: 600;
+        color: #333;
+        margin-bottom: 20px;
+        font-size: 3rem;
+    }
+    input[type="email"],
+    input[type="text"] {
+        width: calc(50% - 10px);
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border: none;
+        border-bottom: 1px solid #edd3d3;
+    }
+    input[type="email"] {
+        width: 100%;
+        outline: none;
+    }
+
+    &__names {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .checkbox {
+        font-size: 1.5rem;
+        font-family: $font-display;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        display: flex;
+        gap: 1rem;
+        justify-content: start;
+    }
+    button {
+        background-color: $color-primary;
+        color: white;
+        border: none;
+        padding: 15px;
+        text-transform: uppercase;
+        cursor: pointer;
+        width: 100%;
+        border-radius: 5px;
     }
 }
